[workspace]
members = [
  "shuffle","zshuffle-wasm"]
resolver = "2"

[workspace.package]
name = "zypher-test"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-channel = "2.3.1"
serde_json = "1.0.121"
serde ={version= "1.0.209",features = ["derive"]}

uzkge = { version = "0.1.2",  default-features = false }

ark-ec = { version = "0.4", default-features = false, package = "ark-ec-zypher" }
ark-ff = { version = "0.4", default-features = false, features = ["asm"], package = "ark-ff-zypher" }
ark-poly = { version = "0.4", default-features = false, package = "ark-poly-zypher" }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"], package = "ark-serialize-zypher" }
ark-std = { version = "0.4", default-features = false, package = "ark-std-zypher" }
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"], package = "ark-bn254-zypher" }
ark-ed-on-bn254 = { version = "0.4", default-features = false, package = "ark-ed-on-bn254-zypher" }
ark-relations = { version = "0.4", default-features = false, package = "ark-relations-zypher" }
ark-r1cs-std = { version = "0.4", default-features = false, package = "ark-r1cs-std-zypher" }
ark-snark = { version = "0.4", default-features = false, package = "ark-snark-zypher" }
ark-groth16 = { version = "0.4", default-features = false, package = "ark-groth16-zypher" }
thiserror = "1.0.63"
once_cell = "1.19.0"
bincode = "1.3"
rand_chacha = "0.3"
rayon = "1.7"
structopt =  "0.3"
hex = "0.4.3"
wasm-bindgen={version="=0.2.92"}
serde-wasm-bindgen = "0.6.5"