[workspace]
members = [ "bevy-test", "shuffle-service",
  "shuffle"]
resolver = "2"

[workspace.package]
name = "zypher-test"
version = "0.1.0"
edition = "2021"
authors = ["rahul srivastava<rahul.srivastava0587@gmail.com>"]

[workspace.dependencies]
async-channel = "2.3.1"
serde_json = "1.0.121"
serde ={version= "1.0.209",features = ["derive"]}
bevy = "0.14.0"
uzkge = { version = "0.1.2",  default-features = false }

ark-ec = { version = "0.4", default-features = false, package = "ark-ec-zypher" }
ark-ff = { version = "0.4", default-features = false, features = ["asm"], package = "ark-ff-zypher" }
ark-poly = { version = "0.4", default-features = false, package = "ark-poly-zypher" }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"], package = "ark-serialize-zypher" }
ark-std = { version = "0.4", default-features = false, package = "ark-std-zypher" }
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"], package = "ark-bn254-zypher" }
ark-ed-on-bn254 = { version = "0.4", default-features = false, package = "ark-ed-on-bn254-zypher" }
ark-relations = { version = "0.4", default-features = false, package = "ark-relations-zypher" }
ark-r1cs-std = { version = "0.4", default-features = false, package = "ark-r1cs-std-zypher" }
ark-snark = { version = "0.4", default-features = false, package = "ark-snark-zypher" }
ark-groth16 = { version = "0.4", default-features = false, package = "ark-groth16-zypher" }
thiserror = "1.0.63"
once_cell = "1.19.0"
bincode = "1.3"
rand_chacha = "0.3"
rand_core = "0.6"
rayon = "1.7"
structopt =  "0.3"
hex = "0.4.3"
wasm-bindgen={version="=0.2.92"}
serde-wasm-bindgen = "0.6.5"
reqwest = {version="0.12.5",features=["json"]}
schemars = "0.8"
zshuffle={path="./shuffle"}
rocket={version="0.5.0-rc.4", default-features=false,features=["json"]}
rocket_okapi={version="0.8.0",features=["swagger","secrets"]}