[package]
name = "shuffle-service"
version.workspace = true
edition.workspace = true

[dependencies]
zshuffle={path="../shuffle"}
rocket={version="0.5.0-rc.4", default-features=false,features=["json"]}
serde.workspace = true
serde_json.workspace = true
rocket_okapi={version="0.8.0",features=["swagger","secrets"]}
schemars = "0.8"